# keyhunt-Ecc

./: .gitignore  AUDIT_DELIVERABLES_SUMMARY.md  AUDIT_REPORT.md  BUILD_VERIFICATION_SUMMARY.md  CMakeLists.txt  LICENSE  Makefile  README.md  REMEDIATION_PLAN.md  all_sources.txt  audit-issues.json  audit_issues.json  bench.sh  compile_commands.json  keyhunt_ecc_sources.txt  keyhunt_sources.txt  static_markers.txt
KEYHUNT-ECC/: .gitignore  CMakeLists.txt
KEYHUNT-ECC/api/: bridge.cu  bridge.h
KEYHUNT-ECC/core/: batch_kernel.h  ec_point.h  fp_bitcrack.h  fp_montgomery.h  fp_montgomery_new.h  multiplicative_chain.h
KEYHUNT-ECC/cuda/: device_functions.h  launch_config.h  memory_layout.h
KEYHUNT-ECC/secp256k1/: constants.h
albertobsd-keyhunt/: .gitignore  CHANGELOG.md  GPU_OPTIMIZATION_README.md  LICENSE  Makefile  TODO.md  build.bat  build_msys2.sh  build_simple.ps1  build_windows.bat  build_windows.ps1  gpu_backend.cpp  gpu_backend.h  gpu_backend_stub.cpp  gpu_optimization_1G.sh  keyhunt.cpp
albertobsd-keyhunt/base58/: base58.c  libbase58.h
albertobsd-keyhunt/bloom/: LICENSE  bloom.h
albertobsd-keyhunt/gmp256k1/: Point.cpp  Point.h
albertobsd-keyhunt/hash/: ripemd160.cpp  ripemd160.h  ripemd160_sse.cpp  sha256.cpp  sha256.h  sha256_sse.cpp  sha512.cpp  sha512.h
albertobsd-keyhunt/rmd160/: rmd160.c  rmd160.h
albertobsd-keyhunt/secp256k1/: Int.cpp  Int.h  IntGroup.cpp  IntGroup.h  IntMod.cpp  Point.cpp  Point.h  Random.h  SECP256K1.cpp  SECP256k1.h
albertobsd-keyhunt/sha3/: keccak.c  keccak.h  sha3.c  sha3.h
albertobsd-keyhunt/tests/: 120.txt  125.txt  130.txt  1to32.eth  1to32.rmd  1to63_65.txt  63.pub  64.rmd  64.txt  66.rmd  66.txt  in.txt  minikeys.txt  substracted40.txt  test120.txt  unsolvedpuzzles.rmd  unsolvedpuzzles.txt  vanitytargets.txt
audit-evidence/: README.md
audit-evidence/structural-analysis/: codebase-stats.txt
dev-support/: STAGE3_STRUCTURAL_REDUNDANCY_ANALYSIS.md  build.py  cflow_analysis.txt  cflow_base58.txt  clang_tidy_analysis.txt  duplicate_files.txt  duplicates_clean.txt  exported_symbols.txt  perf_assessment_non_cuda.md
dev-support/audit/: stage2_static_audit.py  stage2_static_report.md
dev-support/reports/stage4/: kernel_resource_analysis.md
docs/: performance_plan.md
include/: common.h  gecc.h
include/gecc/: arith.h  common.h  ecdsa.h  support.h
include/gecc/arith/: batch_ec.h  digit.h  ec.h  fp.h  gccl.h  layout.h  multiplicative_chain.h
include/gecc/arith/details/: fp_mont_add_sub.h  fp_mont_inverse.h  fp_mont_multiply.h
include/gecc/ecdsa/: gsv.h
scripts/: ccgen.py  constants.py  constants_generator.py  ec.py  ec_ops.py  ec_test.sage  field.py  mod_sqrt.py  stage4_profile.sh  verify_build_stage1.sh
test/: CMakeLists.txt  ecdsa_ec_fixed_pmul.cu  ecdsa_ec_unknown_pmul.cu  ecdsa_sign.cu  ecdsa_sign_baseline.cu  ecdsa_verify.cu  ecdsa_verify_baseline.cu  fp.cu  gpu_test_utils.cuh  modinv_data_parallel_profiling.cu  performance_benchmark.cu
